--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,9 @@
 html, body {
     font-family: 'Roboto', sans-serif;
 }
+
+* {
+    text-decoration: none;
+    list-style: none;
+    color: black;
+}
